--- a/index.html
+++ b/index.html
@@ -5,8 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>하하하하하하하하하</title>
+    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h3>444444</h3>
+    <!--Start header-->
+    <header>
+        <h2 class="hide">대메뉴</h2>
+        <a href=""><img class="mainimg" src="images/Mark 43.jfif" ></a>
+        <nav class="lnb">
+            <ul>
+                <li><a href="#"><span>Home</span></a></li>
+                <li><a href="#info"><span>About</span></a></li>
+                <li><a href="#about"><span>Favorites</span></a></li>
+                <li><a href="#"><span>Project</span></a></li>
+            </ul>
+        </nav>
+        <h2 class="hide">SNS</h2>
+        <nav class="sns">
+            <ul>
+                <li><a href="#"><img src="images/facebook.png" alt=""></a></li>
+                <li><a href="#"><img src="images/github.png" alt=""></a></li>
+                <li><a href="#"><img src="images/instagram.png" alt=""></a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--End header-->
+    
+    <!--Start Home section-->
+    <section class="win" id="info">
+        <p class="hi">"Hi I'm Juyoung"</p><br>
+        <p>만나서 반갑습니다! 저에 대해 더 알고 싶으시다면 스크롤을 내려보세요!</p>
+        <div class="info">
+            <div class="infoimg">
+            <img src="images/KakaoTalk_20210215_142507066.jpg" >
+            </div>
+        </div>
+    </section>
+    <!--End Home section-->
+
+    <!--Start About section -->
+    <section class="win" id="about"> 
+        <div>
+
+        </div>
+    </section>
+    <!--End About section -->
 </body>
 </html>
