--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
     <!--Start Home section-->
     <section class="win" id="info">
       <p class="hi">"Hi I'm Juyoung"</p>
-      <br />
       <p>
         만나서 반갑습니다! 저에 대해 더 알고 싶으시다면 스크롤을 내려보세요!
       </p>
       <div class="info">
-        <div class="infoimg">
-          <img src="images/KakaoTalk_20210215_142507066.jpg" />
-        </div>
+          <img src="images/KakaoTalk_20210215_142507066.jpg" alt='' />
+          <img src="images/KakaoTalk_20210215_142507066.jpg" alt='' />
+          <img src="images/KakaoTalk_20210215_142507066.jpg" alt='' />
       </div>
     </section>
     <!--End Home section-->
