--- a/index.html
+++ b/index.html
@@ -11,18 +11,96 @@
   <body>
     <!--Start header-->
     <header>
-      <h2 class="hide">대메뉴</h2>
-      <a href=""><img class="mainimg" src="images/Mark 43.jfif" /></a>
       <nav class="lnb">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#info">About</a></li>
-          <li><a href="#about">Favorites</a></li>
+          <li><a href="#Home">Home</a></li>
+          <li><a href="#">Determination</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#">Project</a></li>
         </ul>
       </nav>
-      <h2 class="hide">SNS</h2>
-      <nav class="sns">
+    </header>
+    <!--End header-->
+
+    <!--Start Home section-->
+    <section class="win" id="Home">
+      <div class="main">
+        <div class="logo"></div>
+          <h1>DEVELOPER</h1>
+        <div class="line"></div>
+        <p>
+          위코드 19기 프론트엔드를 공부하고 있는 Juyoung Son의 포트폴리오
+          사이트입니다.
+        </p>
+        <a href="#info" class="learnmore"> 상세보기 </a>
+      </div>
+    </section>
+    <!--End Home section-->
+
+    <!--Start skills section -->
+    <section class="win" id="skills">
+      <p class="hi">Skills</p>
+      <div class="contents-wrapper">
+        <div class="info">
+            <ul>
+              <li>
+                <img src="../images/HTML.png" alt="" class="icon" />
+                <p>HTML - 85%</p>
+                <progress class="progress_bar" max="100" value="85">
+                </progress>
+              </li>
+              <li>
+                <img src="images/CSS.png" alt="" class="icon" />
+                <p>CSS - 60%</p>
+                <progress class="progress_bar" max="100" value="60">
+                </progress>
+              </li>
+              <li>
+                <img src="images/JAVASCRIPT.png" alt="" class="icon" />
+                <p>JAVASCRIPT - 50%</p>
+                <progress class="progress_bar" max="100" value="50">
+                </progress>
+              </li>
+              <li>
+                <img src="images/JQUERY.png" alt="" class="icon" />
+                <p>JQUERY - 30%</p>
+                <progress class="progress_bar" max="100" value="50">
+                </progress>
+              </li>
+              <li>
+                <img src="images/python.png" alt="" class="icon" />
+                <p>Python - 20%</p>
+                <progress class="progress_bar" max="100" value="50">
+                </progress>
+              </li>
+              <li>
+                <img src="images/react.png" alt="" class="icon" />
+                <p>React - 30%</p>
+                <progress class="progress_bar" max="100" value="50">
+                </progress>
+              </li>
+              <li>
+                <img src="images/react.png" alt="" class="icon" />
+                <p>OA - 80%</p>
+                <progress class="progress_bar" max="100" value="80">
+                </progress>
+              </li>
+              <li>
+                <img src="images/react.png" alt="" class="icon" />
+                <p>Driving - 70%</p>
+                <progress class="progress_bar" max="100" value="50">
+                </progress>
+              </li>
+            </ul>
+          <div class="info"></div>
+        </div>
+      </div>
+    </section>
+
+    </section>
+    <!--End skills section -->
+
+    <!-- <nav class="sns">
         <ul>
           <li>
             <a href="#"><img src="images/facebook.png" alt="" /></a>
@@ -34,28 +112,6 @@
             <a href="#"><img src="images/instagram.png" alt="" /></a>
           </li>
         </ul>
-      </nav>
-    </header>
-    <!--End header-->
-
-    <!--Start Home section-->
-    <section class="win" id="info">
-      <p class="hi">"Hi I'm Juyoung"</p>
-      <p>
-        만나서 반갑습니다! 저에 대해 더 알고 싶으시다면 스크롤을 내려보세요!
-      </p>
-      <div class="info">
-          <img src="images/KakaoTalk_20210215_142507066.jpg" alt='' />
-          <img src="images/KakaoTalk_20210215_142507066.jpg" alt='' />
-          <img src="images/KakaoTalk_20210215_142507066.jpg" alt='' />
-      </div>
-    </section>
-    <!--End Home section-->
-
-    <!--Start About section -->
-    <section class="win" id="about">
-      <div></div>
-    </section>
-    <!--End About section -->
+      </nav> -->
   </body>
 </html>
