--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>자기소개페이지</title>
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/fotter.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/skills.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
@@ -25,11 +29,11 @@
   </head>
   <body>
     <!--Start Home section-->
-    <section class="main" id="Home">
-      <header class="header_navigtion">
-        <a href="#Home">Home</a>
+    <section class="main" id="home">
+      <header class="header_nevigation">
+        <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#skills_link">Skills</a>
+        <a href="#skills">Skills</a>
       </header>
       <div class="logo_box">
         <img src="./images/logo_transparent.png" alt="메인로고" />
@@ -63,6 +67,19 @@
             <div class="hover"><sapn>20</sapn> following</div>
             <div class="dot">·</div>
             <div class="hover"><img src="images/Star.svg" alt="" />110</div>
+          </div>
+          <div class="sns">
+            <ul>
+              <li>
+                <a href="https://www.facebook.com/profile.php?id=100004057694272" target="_blank"><img src="images/facebook.png" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://github.com/SON-JUYOUNG?tab=repositories" target="_blank"><img src="images/github.png" alt="" /></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/95.s.guri/" target="_blank"><img src="images/instagram.png" alt="" /></a>
+              </li>
+            </ul>
           </div>
         </div>
         <ul class="about_contents_box two">
@@ -122,14 +139,10 @@
     <!-- End About -->
 
     <!--Start skills section -->
-    <section class="win" id="skills">
-      <div class="contents-wrapper">
-        <div class="win_h1">
-          <h1 class="hi" id="skills_link">Skills</h1>
-        </div>
-
-        <div class="info">
-          <ul>
+    <section class="skills" id="skills">
+          <h1>SKILLS</h1>
+        <div class="skills_info">
+          <ul class="skills_gallery">
             <li>
               <img src="images/HTML.png" alt="" class="icon" />
               <p>HTML - 85%</p>
@@ -177,26 +190,12 @@
             </li>
           </ul>
           <div class="info"></div>
-        </div>
       </div>
     </section>
     <!--End skills section -->
 
     <!-- Start fotter -->
     <footer class="bottom">
-      <!-- <nav class="sns">
-        <ul>
-          <li>
-            <a href="#"><img src="images/facebook.png" alt="" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="images/github.png" alt="" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="images/instagram.png" alt="" /></a>
-          </li>
-        </ul>
-      </nav> -->
       <p>Copyright ©SONJUYOUNG. All Rights Reserved.</p>
     </footer>
     <!-- End fotter -->
