--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
       href="https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Pen+Script&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css
+    ">
   </head>
   <body>
     <!--Start Home section-->
     <section class="main" id="home">
       <header class="header_nevigation">
+        <div class="menu_icon" id="sidemenu">
+          <i class="fas fa-chevron-circle-down"></i>
+        </div>
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
@@ -43,6 +48,7 @@
         <div class="line"></div>
         <p>위코드 19기에서 프론트엔드를 공부하고 있는 Juyoung Son입니다.</p>
       </div>
+    
     </section>
     <!--End Home section-->
 
