--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css
     "
     />
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
       $(window).resize(function(){
         if($(window).width() < 768){
